--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,8 +1,8 @@
 html,
 body {
-    font-family: sans-serif;
-    margin: 0;
-    height: 100%;
+  font-family: sans-serif;
+  margin: 0;
+  height: 100%;
 }
 
 p {
@@ -10,16 +10,7 @@ p {
   text-indent: 1rem;
 }
 
-hr {
-  border: none;
-  height: 1px;
-  background-color: lightgray;
-  width: 40px;
-  margin: 1.5rem 0 1rem 0;
-}
-
 #root {
-  display: flex;
   height: 100%;
 }
 
@@ -27,23 +18,21 @@ hr {
   flex-grow: 1;
 }
 
-.sidebar {
+header {
   display: flex;
-  flex-direction: column;
-  padding: 1rem;
-
-  border-right: 1px solid lightgray;
+  justify-content: space-between;
+  width: 100%;
+  border-bottom: 1px solid lightgray;
 }
 
-.sidebar > a {
-  margin: 0.5rem 0;
+nav {
+  display: flex;
+  margin: auto 0;
 }
 
 .page-container {
   display: flex;
   flex-direction: column;
-
-  padding: 0 1rem;
 }
 
 .align-center {
@@ -53,26 +42,4 @@ hr {
 .socials-container {
   display: flex;
   justify-content: space-between;
-}
-
-.socials-card {
-  display: flex;
-  align-items: center;
-
-  border: 1px solid lightgray;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
-  margin: 1rem;
-
-  text-decoration: none;
-  color: unset;
-}
-
-.socials-card:hover {
-  background-color: lightgray;
-}
-
-.socials-card > i {
-  font-size: 1.5rem;
-  margin-right: 0.5rem;
 }
